Sun Jun 29 17:44:23 2008  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/parser.rb (RSS::ListenerMixin#known_class): define to
	work with ruby 1.8.x too.

Sun Jun 29 17:41:42 2008  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/base.rb (RSS::Maker::RSSBase#to_feed): raise
	exception not return nil if RSS::Maker.make can't get required
	information.
	* test/rss/rss-assertions.rb: follow the above change.

Sun Jun 29 17:37:23 2008  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/base.rb (RSS::Maker::RSSBase#make): require block.
	* test/rss/test_maker_{0.9,1.0,2.0}.rb: follow the above change.

Sun Jun 29 17:33:34 2008  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/base.rb, lib/rss/maker/itunes.rb: don't use
	instance_eval to initialize variables. (speed up)

Sun Jun 29 17:31:15 2008  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb, test/rss/test_version.rb (RSS::VERSION):
	0.2.4 -> 0.2.5.

Sun Jun 29 11:36:20 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* dir.rb: fix resource leak.

Sun Jun 29 09:43:10 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tmpdir.rb (@@systmpdir): prior LOCAL_APPDATA if possible, and
	  should be clean.  based on a patch from arton <artonx AT
	  yahoo.co.jp> at [ruby-dev:35269]

Sun Jun 29 07:53:08 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (date2time_str): fix the overflow in
	  some situation. [ruby-bugs-20793]

Sat Jun 28 21:25:08 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/ruby.h (struct RRegexp): new field usecnt.  replace
	  str and len by src.

	* gc.c (gc_mark_children): mark src field of regexp.
	  (obj_free): don't free str field.

	* re.c (REG_BUSY): removed.
	  (rb_reg_initialize): prohibit re-initialize regexp.
	  (rb_reg_search): use usecnt to prevent freeing regexp currently
	  using.  this prevents SEGV by:
	    r = /\A((a.)*(a.)*)*b/
	    r =~ "ab" + "\xc2\xa1".force_encoding("euc-jp")
	    t = Thread.new { r =~ "ab"*8 + "\xc2\xa1".force_encoding("utf-8")}